change from 0117 to 0131

--- a/src/doML.ipynb
+++ b/src/doML.ipynb
@@ -25,46 +25,8 @@
     "load_dotenv()\n",
     "# root_dir = os.environ[\"root_dir\"]\n",
     "root_dir = \"../\"\n",
-    "picout = root_dir + \"MLres/\""
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "データの参照先の設定、インスタンス作成"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TARGET = \"density\" #ALTIMAGES等のディレクトリにくっつけます\n",
-    "#それぞれ1番最後の'/'は忘れずつけること\n",
-    "ALTIMAGES0 = root_dir + \"imgout/0122altimg0X/\"#リコネクションなし分割済データフォルダ.makesepnpy.ipynbであらかじめ分割データを入れておく\n",
-    "ALTIMAGES1 = root_dir + \"imgout/0122altimg1X/\"#リコネクションあり分割済データフォルダ.makesepnpy.ipynbであらかじめ分割データを入れておく\n",
-    "SOURCE0 = [root_dir + \"imgout/0117_not/\",root_dir + \"imgout/0117_1O/\"]#リコネクションありのラベリングcsvのあるフォルダ\n",
-    "SOURCE1 = [root_dir + \"imgout/0117_1X/\"]#リコネクションなしのラベリングcsvのあるフォルダ\n",
-    "IMGSHAPE = (100,10)#出来れば画像サイズはすべて同じで合ってほしい。違うサイズが混じる場合は最も多いサイズを指定すること\n",
-    "# IMGSHAPE = (100,10,2)\n",
-    "DO_PCA = False #データ圧縮。IMGSHAPEと、データサイズが途方もなく多ければTrueにする。\n",
-    "randomstate = None #学習時のパラメータ。初期値はNone。結果を固定したければ1とかに設定する。\n",
+    "picout = root_dir + \"MLres/\"\n",
     "\n",
-    "ML = MLs.ML(TARGET, ALTIMAGES0, ALTIMAGES1, SOURCE0, SOURCE1, IMGSHAPE, DO_PCA\n",
-    ",randomstate=randomstate\n",
-    ",dilute=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#画像出力用関数\n",
     "import cv2\n",
     "def savetrimBMP(bmp, outname, xcenter, ycenter):\n",
     "    bmpXlen = 1799\n",
@@ -107,7 +69,37 @@
     "def loadmodel(modelsdir, target, tag, methodname):\n",
     "    path = modelsdir + \"model_\" + target + \"_\" + tag + \"_\" + methodname\n",
     "    with open(path, 'rb') as f:\n",
-    "        return pickle.load(f)    \n"
+    "        return pickle.load(f) "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "データの参照先の設定、インスタンス作成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TARGET = \"density\" #ALTIMAGES等のディレクトリにくっつけます\n",
+    "#それぞれ1番最後の'/'は忘れずつけること\n",
+    "ALTIMAGES0 = root_dir + \"imgout/0131altimg0X/\"#リコネクションなし分割済データフォルダ.makesepnpy.ipynbであらかじめ分割データを入れておく\n",
+    "ALTIMAGES1 = root_dir + \"imgout/0131altimg1X/\"#リコネクションあり分割済データフォルダ.makesepnpy.ipynbであらかじめ分割データを入れておく\n",
+    "SOURCE0 = [root_dir + \"imgout/0131_not/\",root_dir + \"imgout/0131_1O/\"]#リコネクションなしのラベリングcsvのあるフォルダ\n",
+    "SOURCE1 = [root_dir + \"imgout/0131_1X/\"]#リコネクションありのラベリングcsvのあるフォルダ\n",
+    "IMGSHAPE = (100,10)#出来れば画像サイズはすべて同じで合ってほしい。違うサイズが混じる場合は最も多いサイズを指定すること\n",
+    "# IMGSHAPE = (100,10,2)\n",
+    "DO_PCA = False #データ圧縮。IMGSHAPEと、データサイズが途方もなく多ければTrueにする。\n",
+    "randomstate = None #学習時のパラメータ。初期値はNone。結果を固定したければ1とかに設定する。\n",
+    "\n",
+    "ML = MLs.ML(TARGET, ALTIMAGES0, ALTIMAGES1, SOURCE0, SOURCE1, IMGSHAPE, DO_PCA\n",
+    ",randomstate=randomstate\n",
+    ",dilute=True)"
    ]
   },
   {
@@ -667,7 +659,7 @@
     "# model = ML.rbfSVC()\n",
     "df = model[1]\n",
     "df1 = df[df[\"y\"] != df[\"predict\"]]\n",
-    "dosavetrimBMPs(df1, \"../imgout/0122_not;1Oand/\")\n",
+    "# dosavetrimBMPs(df1, \"../imgout/0131_not;1Oand/\")\n",
     "df1"
    ]
   },
@@ -2007,21 +1999,24 @@
    ],
    "source": [
     "import pickle\n",
-    "\n",
+    "props = [(\"X\",\"imgout/0131_0X/\",\"imgout/0131_1X/\",[root_dir + \"imgout/0131_not/\",root_dir + \"imgout/0131_1O/\"]),\n",
+    " (\"O\",\"imgout/0131_0O/\",\"imgout/0131_1O/\", [root_dir + \"imgout/0131_not/\",root_dir + \"imgout/0131_1X/\"])]\n",
     "\n",
     "for target in [\"density\", \"enstrophy\", \"pressure\",\"magfieldx\", \"magfieldy\", \"velocityx\",\"velocityy\"]:\n",
-    "    for tag, altimages1, labelsources1 in [(\"X\",\"imgout/0117_1X/\",\"txt/labels1X/\"), (\"O\",\"imgout/0117_1O/\", \"txt/labels1O/\")]:\n",
+    "    for tag, altimages0,altimages1,sources0,sources1 in props:\n",
     "        TARGET = target\n",
     "        #それぞれ1番最後の'/'は忘れずつけること\n",
-    "        ALTIMAGES0 = root_dir + \"imgout/0117_not/\"#リコネクションなし分割済データフォルダ\n",
+    "        ALTIMAGES0 = root_dir + altimages0#リコネクションなし分割済データフォルダ\n",
     "        ALTIMAGES1 = root_dir + altimages1#リコネクションあり分割済データフォルダ\n",
-    "        LABEL_SOURCE0 = root_dir + \"txt/labels0/\"#リコネクションありのラベリングcsvのあるフォルダ\n",
-    "        LABEL_SOURCE1 = root_dir + labelsources1#リコネクションなしのラベリングcsvのあるフォルダ\n",
+    "        SOURCE0 = sources0#リコネクションありのラベリングcsvのあるフォルダ\n",
+    "        SOURCE1 = sources1#リコネクションなしのラベリングcsvのあるフォルダ\n",
     "        IMGSHAPE = (100,10)#出来れば画像サイズはすべて同じで合ってほしい。違うサイズが混じる場合は最も多いサイズを指定すること\n",
     "        DO_PCA = False #データ圧縮。IMGSHAPEと、データサイズが途方もなく多ければTrueにする。\n",
     "        randomstate = None #学習時のパラメータ。初期値はNone。結果を固定したければ1とかに設定する。\n",
     "\n",
-    "        ML = MLs.ML(TARGET, ALTIMAGES0, ALTIMAGES1, LABEL_SOURCE0, LABEL_SOURCE1, IMGSHAPE, DO_PCA,randomstate=randomstate)\n",
+    "        ML = MLs.ML(TARGET, ALTIMAGES0, ALTIMAGES1, SOURCE0, SOURCE1, IMGSHAPE, DO_PCA\n",
+    "        ,randomstate=randomstate\n",
+    "        ,dilute=True)\n",
     "        def savemodel(model, methodname):\n",
     "            path = picout + \"model_\" + target + \"_\" + tag + \"_\" + methodname\n",
     "            file = open(path, \"wb\") \n",
@@ -2039,68 +2034,6 @@
     "        savemodel(model, \"rbfSVC\")\n",
     "        model = ML.XGBoost()\n",
     "        savemodel(model, \"XGBoost\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10668\\3639454398.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[0mrandomstate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;31m#学習時のパラメータ。初期値はNone。結果を固定したければ1とかに設定する。\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m         \u001b[0mML\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMLs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mML\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTARGET\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mALTIMAGES0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mALTIMAGES1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLABEL_SOURCE0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLABEL_SOURCE1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIMGSHAPE\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDO_PCA\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mrandomstate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrandomstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m         \u001b[1;32mdef\u001b[0m \u001b[0msavemodel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmethodname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m             \u001b[0mpicout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mroot_dir\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"MLres/\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\src\\mymodule\\MLs.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, TARGET, ALTIMAGES0, ALTIMAGES1, LABEL_SOURCE0, LABEL_SOURCE1, IMGSHAPE, DO_PCA, dilute, randomstate)\u001b[0m\n\u001b[0;32m     67\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mdilute\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdilute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 69\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     70\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexePCA\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0msize_dir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\src\\mymodule\\MLs.py\u001b[0m in \u001b[0;36mload_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    190\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    191\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mpath_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 192\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi_count\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_regularize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    193\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi_count\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;31m# リコネクションがあることを表すラベル\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    194\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath_test\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi_count\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\src\\mymodule\\MLs.py\u001b[0m in \u001b[0;36mload_regularize\u001b[1;34m(item)\u001b[0m\n\u001b[0;32m    133\u001b[0m             \u001b[1;31m# print(item)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    134\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mtype\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\".npy\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 135\u001b[1;33m                 \u001b[0mim\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    136\u001b[0m             \u001b[1;32melif\u001b[0m \u001b[0mtype\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\".npz\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    137\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"npz doesnot supported\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python37\\site-packages\\numpy\\lib\\npyio.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[0;32m    438\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    439\u001b[0m                 return format.read_array(fid, allow_pickle=allow_pickle,\n\u001b[1;32m--> 440\u001b[1;33m                                          pickle_kwargs=pickle_kwargs)\n\u001b[0m\u001b[0;32m    441\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    442\u001b[0m             \u001b[1;31m# Try a pickle\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python37\\site-packages\\numpy\\lib\\format.py\u001b[0m in \u001b[0;36mread_array\u001b[1;34m(fp, allow_pickle, pickle_kwargs)\u001b[0m\n\u001b[0;32m    739\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misfileobj\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    740\u001b[0m             \u001b[1;31m# We can use the fast fromfile() function.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 741\u001b[1;33m             \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfromfile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    742\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    743\u001b[0m             \u001b[1;31m# This is not a real file. We have to read it the\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "#コピー\n",
-    "import pickle\n",
-    "\n",
-    "\n",
-    "for target in [\"density\"]:\n",
-    "    for tag, altimages1, labelsources1 in [(\"X\",\"imgout/0117_1X/\",\"txt/labels1X/\"), (\"O\",\"imgout/0117_1O/\", \"txt/labels1O/\")]:\n",
-    "        TARGET = target\n",
-    "        #それぞれ1番最後の'/'は忘れずつけること\n",
-    "        ALTIMAGES0 = root_dir + \"imgout/0117_not/\"#リコネクションなし分割済データフォルダ\n",
-    "        ALTIMAGES1 = root_dir + altimages1#リコネクションあり分割済データフォルダ\n",
-    "        LABEL_SOURCE0 = root_dir + \"txt/labels0/\"#リコネクションありのラベリングcsvのあるフォルダ\n",
-    "        LABEL_SOURCE1 = root_dir + labelsources1#リコネクションなしのラベリングcsvのあるフォルダ\n",
-    "        IMGSHAPE = (100,10)#出来れば画像サイズはすべて同じで合ってほしい。違うサイズが混じる場合は最も多いサイズを指定すること\n",
-    "        DO_PCA = False #データ圧縮。IMGSHAPEと、データサイズが途方もなく多ければTrueにする。\n",
-    "        randomstate = None #学習時のパラメータ。初期値はNone。結果を固定したければ1とかに設定する。\n",
-    "\n",
-    "        ML = MLs.ML(TARGET, ALTIMAGES0, ALTIMAGES1, LABEL_SOURCE0, LABEL_SOURCE1, IMGSHAPE, DO_PCA,randomstate=randomstate)\n",
-    "        def savemodel(model, methodname):\n",
-    "\n",
-    "            path = picout + \"model_\" + target + \"_\" + tag + \"_\" + methodname\n",
-    "            file = open(path, \"wb\") \n",
-    "            pickle.dump(model, file)\n",
-    "            file.close()\n",
-    "            print(\"model_\" + target + \"_\" + tag + \"_\" + methodname+\"\\n\")\n",
-    "            print(\"------------------\\n\\n\\n\\n\")\n",
-    "        model = ML.linearSVC()\n",
-    "        print(model[2])\n",
-    "        savemodel(model, \"linearSVC\")\n",
-    "        model = ML.kneighbors()\n",
-    "        print(model[2])\n",
-    "        savemodel(model, \"kneighbors\")\n",
-    "        model = ML.rbfSVC()\n",
-    "        print(model[2])\n",
-    "        savemodel(model, \"rbfSVC\")\n",
-    "        model = ML.XGBoost()\n",
-    "        print(model[2])\n",
-    "        savemodel(model, \"XGBoost\")"
    ]
   },
   {
