--- a/src/fusionnpy.ipynb
+++ b/src/fusionnpy.ipynb
@@ -8840,14 +8840,14 @@
     "# csvs1O = glob.glob(\"../txt/labels1O/*\")\n",
     "# targets = [\"density\", \"enstrophy\", \"pressure\",\"magfieldx\", \"magfieldy\", \"velocityx\",\"velocityy\"]\n",
     "targetstuples = [(\"magfieldx\", \"magfieldy\", \"mag_tupledxy\", carnellistxy)]\n",
-    "npys0 = \"../imgout/0117_not/\"\n",
-    "npys1X = \"../imgout/0117_1X/\"\n",
-    "npys1O = \"../imgout/0117_1O/\"\n",
+    "npys0 = \"../imgout/0131_not/\"\n",
+    "npys1X = \"../imgout/0131_1X/\"\n",
+    "npys1O = \"../imgout/0131_1O/\"\n",
     "\n",
-    "outdir0 = \"../imgout/0117_not/\"\n",
-    "outdir1X = \"../imgout/0117_1X/\"\n",
-    "outdir1O = \"../imgout/0117_1O/\"\n",
-    "#/imgout/0117_not/density/density_49.50.8_9.528\n",
+    "outdir0 = \"../imgout/0131_not/\"\n",
+    "outdir1X = \"../imgout/0131_1X/\"\n",
+    "outdir1O = \"../imgout/0131_1O/\"\n",
+    "#/imgout/0131_not/density/density_49.50.8_9.528\n",
     "for target1, target2, outbasename, carnel in targetstuples:\n",
     "    for outdir, npys in [(outdir0, npys0), (outdir1X, npys1X), (outdir1O, npys1O)]:\n",
     "        for impath in glob.glob(npys + target1 +\"/*\"): \n",
@@ -17609,14 +17609,14 @@
     "# csvs1O = glob.glob(\"../txt/labels1O/*\")\n",
     "# targets = [\"density\", \"enstrophy\", \"pressure\",\"magfieldx\", \"magfieldy\", \"velocityx\",\"velocityy\"]\n",
     "targetstuples = [(\"velocityx\", \"velocityy\", \"density\", \"energy\", carnelEnergy)]\n",
-    "npys0 = \"../imgout/0117_not/\"\n",
-    "npys1X = \"../imgout/0117_1X/\"\n",
-    "npys1O = \"../imgout/0117_1O/\"\n",
+    "npys0 = \"../imgout/0131_not/\"\n",
+    "npys1X = \"../imgout/0131_1X/\"\n",
+    "npys1O = \"../imgout/0131_1O/\"\n",
     "\n",
-    "outdir0 = \"../imgout/0117_not/\"\n",
-    "outdir1X = \"../imgout/0117_1X/\"\n",
-    "outdir1O = \"../imgout/0117_1O/\"\n",
-    "#/imgout/0117_not/density/density_49.50.8_9.528\n",
+    "outdir0 = \"../imgout/0131_not/\"\n",
+    "outdir1X = \"../imgout/0131_1X/\"\n",
+    "outdir1O = \"../imgout/0131_1O/\"\n",
+    "#/imgout/0131_not/density/density_49.50.8_9.528\n",
     "for target1, target2, target3, outbasename, carnel in targetstuples:\n",
     "    for outdir, npys in [(outdir0, npys0), (outdir1X, npys1X), (outdir1O, npys1O)]:\n",
     "        for impath in glob.glob(npys + target1 +\"/*\"): \n",
@@ -17703,12 +17703,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.7.8 (tags/v3.7.8:4b47a5b6ba, Jun 28 2020, 08:53:46) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6421c100b89c4feb9fb005f61fb54da3e1e62cfff126d543998553caed03568c"
+    "hash": "0a54084e6b208ee8d1ce3989ffc20924477a5f55f5a43e22e699a6741623861e"
    }
   }
  },
