--- a/src/makesepnpy.ipynb
+++ b/src/makesepnpy.ipynb
@@ -61393,9 +61393,9 @@
     "targets = [\"density\", \"enstrophy\", \"pressure\",\"magfieldx\", \"magfieldy\", \"velocityx\",\"velocityy\"]\n",
     "\n",
     "# outdir = \"../imgout/0110_77X/\"\n",
-    "outdir0 = \"../imgout/0117_not/\"\n",
-    "outdir1X = \"../imgout/0117_1X/\"\n",
-    "outdir1O = \"../imgout/0117_1O/\"\n",
+    "outdir0 = \"../imgout/0131_not/\"\n",
+    "outdir1X = \"../imgout/0131_1X/\"\n",
+    "outdir1O = \"../imgout/0131_1O/\"\n",
     "\n",
     "for target in targets:\n",
     "    for outdir, csvs in [(outdir0, csvs0), (outdir1X, csvs1X), (outdir1O, csvs1O)]:\n",
@@ -61430,12 +61430,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.7.8 (tags/v3.7.8:4b47a5b6ba, Jun 28 2020, 08:53:46) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6421c100b89c4feb9fb005f61fb54da3e1e62cfff126d543998553caed03568c"
+    "hash": "0a54084e6b208ee8d1ce3989ffc20924477a5f55f5a43e22e699a6741623861e"
    }
   }
  },
