--- a/src/fusionnpy.ipynb
+++ b/src/fusionnpy.ipynb
@@ -87,7 +87,10 @@
     "    return res\n",
     "\n",
     "def carnelEnergy(vx, vy, dens):\n",
-    "     return dens * (vx**2 + vy**2) / 2"
+    "     return dens * (vx**2 + vy**2) / 2\n",
+    "\n",
+    "def carnelRad(vx,vy):\n",
+    "    return np.arccos(vx/np.sqrt(vx**2+vy**2))"
    ]
   },
   {
@@ -17689,7 +17692,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -17703,12 +17706,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.7.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6421c100b89c4feb9fb005f61fb54da3e1e62cfff126d543998553caed03568c"
+    "hash": "f042362ee065dc60858c472817d1d4759aa3f58fd79a86ac939381b13a520f6f"
    }
   }
  },
